[package]
name = "publish"
version = "0.1.0"
authors = ["David Halls <dave@davedoesdev.com>"]
edition = "2018"

[dependencies]
bytes = "0.5"
env_logger = "0.7"
futures-util = "0.3"
log = "0.4"

[dependencies.reqwest]
version = "0.10"
features = ["stream"]

[dependencies.tokio]
version = "0.2"
features = ["macros", "io-std"]

[dependencies.tokio-util]
version = "0.2"
features = ["codec"]
